--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Philosopher:ital@1&display=swap');
 
 * {
     margin: 0;
@@ -33,6 +35,8 @@ html {
 
 body{
     font-family: 'Poppins', sans-serif;
+    /* font-family: 'Satisfy', cursive; */
+    /* font-family: 'Philosopher', sans-serif; */
     background: var(--color-bg);
     color: var(--color-white);
     line-height: 1.7;
