--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -55,3 +55,19 @@ header {
     font-weight: 300;
     font-size: 0.9rem;
 }
+
+@media screen and (max-width:1024px){
+    header {
+        height: 68vh;
+    }
+}
+
+@media screen and (max-width:600px){
+    header {
+        height: 100vh;
+    }
+    .header_socials,
+    .scroll_down {
+        display: none;
+    }
+}
